refactor: clean up project for open-source release
- Fix hooks layer bug: replace Math.random() with deterministic layout
  in engineeringLayout.ts to prevent nodes from shifting on re-render
- Fix import ordering in KnowledgeGraph.tsx (moved misplaced imports)
- Remove hardcoded paths: auto-detect Claude config from home directory
- Remove all console.log/warn debug statements across codebase
- Remove dead code: unused mock data generators, debug window exposure
- Delete 35+ unnecessary files: screenshots, Chinese reports, test files,
  zip archives, dev scripts, .vscode config
- Redirect legacy page (/) to V3
- Rewrite README for open-source Claude Code visualization project
- Update package.json with repo info and cleaned scripts
- Add .env.example for configuration
- Update .gitignore for cleaner repo

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,12 @@ next-env.d.ts
 
 # OS
 Thumbs.db
+
+# Playwright MCP
+.playwright-mcp/
+
+# Screenshots and temp files
+CCimages/
+*.output
+*.png
+!docs/images/*.png
