feat: real-time activity monitoring and animated attention flow
- Rewrite AttentionFlow with animated dashed curves using CatmullRomCurve3,
  replacing solid thick lines with flowing dashed lines and moving particles
  to prevent visual clutter when many connections overlap
- Add standalone SSE activity server (scripts/activity-server.mjs) that
  monitors ~/.claude directory for file changes in real-time
- Add useActivityStore for real-time event tracking with auto-reconnect
- Add LiveActivityOverlay with expanding pulse rings on active nodes
- Add LIVE/IDLE status indicator in bottom status bar
- Thin KnowledgeGraph connection lines (reduced lineWidth and opacity)
  for cleaner visual hierarchy

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "next start",
     "clean": "rimraf .next node_modules/.cache",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "activity-server": "node scripts/activity-server.mjs"
   },
   "dependencies": {
     "react": "^18.2.0",
